--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node ./node_modules/nodemon/bin/nodemon.js Core/server/src/app.js",
+      "start": "node Core/server/src/app.js",
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
