--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "bulma": "^0.7.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "morgan": "~1.9.0"
+    "elasticsearch": "^15.2.0",
+    "express": "^4.16.4",
+    "fs": "0.0.1-security",
+    "moment": "^2.22.2",
+    "morgan": "^1.9.1",
+    "skypicker": "^1.0.3"
   }
 }
