--- a/Core/server/package.json
+++ b/Core/server/package.json
@@ -1,25 +1,21 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node ./node_modules/nodemon/bin/nodemon.js src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "keywords": [],
-  "author": "Bryce Remick",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "bulma": "^0.7.2",
+    "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "debug": "~2.6.9",
     "elasticsearch": "^15.2.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.5",
-    "skiplagged-api-wrapper": "^1.0.0"
+    "skypicker": "^1.0.3"
   }
 }
