--- a/Core/server/package.json
+++ b/Core/server/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.7.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "cron": "^1.7.0",
     "debug": "~2.6.9",
     "elasticsearch": "^15.2.0",
     "express": "^4.16.4",
