Base Frontend Authentication
1) Added Firebase initialization
2) Set-up Firebase account creation w/ email/pass
3) Set-up Firebase Sign-in w/ email/pass
4) Error catching for register and login
5) Routing to app page upon successful sign-in

--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "firebase": "^5.9.2",
     "latlon-geohash": "^1.1.0",
     "mapbox-gl": "^0.51.0",
     "material-design-icons-iconfont": "^4.0.2",
