--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -24,7 +24,8 @@
     "vue-js-modal": "^1.3.26",
     "vue-router": "^3.0.2",
     "vuetify": "^1.3.5",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "vuex-persist": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
