--- a/Core/server/package.json
+++ b/Core/server/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bulma": "^0.7.2",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.4",
     "cron": "^1.7.0",
     "debug": "~2.6.9",
