--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "airlines-iata-codes": "^1.0.1",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "dotenv": "^7.0.0",
