--- a/Core/server/package.json
+++ b/Core/server/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "elasticsearch": "^15.2.0",
     "express": "^4.16.4",
+    "firebase-admin": "^8.0.0",
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
