--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "airlines-iata-codes": "^1.0.1",
     "axios": "^0.18.0",
+    "buefy": "^0.7.8",
     "bulma": "^0.7.2",
     "dotenv": "^7.0.0",
     "firebase": "^5.9.2",
