--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -10,36 +10,38 @@
   },
   "dependencies": {
     "airlines-iata-codes": "^1.0.1",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "buefy": "^0.7.8",
-    "bulma": "^0.7.2",
+    "bulma": "^0.7.5",
+    "core-js": "^2.5.7",
     "dotenv": "^7.0.0",
-    "firebase": "^5.9.2",
+    "firebase": "^5.11.1",
     "latlon-geohash": "^1.1.0",
     "mapbox-gl": "^0.51.0",
-    "material-design-icons-iconfont": "^4.0.2",
+    "material-design-icons-iconfont": "^4.0.5",
     "moment": "^2.23.0",
+    "moment-timezone": "^0.5.25",
     "node-modules": "^1.0.1",
-    "randomcolor": "^0.5.3",
+    "randomcolor": "^0.5.4",
     "sweet-modal-vue": "^2.0.0",
     "v-calendar": "^0.9.7",
-    "vue": "^2.5.21",
-    "vue-js-modal": "^1.3.26",
-    "vue-router": "^3.0.2",
-    "vuetify": "^1.3.5",
-    "vuex": "^3.1.0",
-    "vuex-persist": "^2.0.0"
+    "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
+    "vue-router": "^3.0.6",
+    "vuetify": "^1.5.16",
+    "vuex": "^3.1.1",
+    "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "jest": "^24.7.1",
-    "node-sass": "^4.9.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.4",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "jest": "^24.8.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.6.10"
   }
 }
