Added styling to landing page

--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -9,6 +9,9 @@
     "unit": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "airlines-iata-codes": "^1.0.1",
     "axios": "^0.18.1",
     "buefy": "^0.7.8",
@@ -16,19 +19,11 @@
     "core-js": "^2.5.7",
     "dotenv": "^7.0.0",
     "firebase": "^5.11.1",
-    "latlon-geohash": "^1.1.0",
-    "mapbox-gl": "^0.51.0",
-    "material-design-icons-iconfont": "^4.0.5",
-    "moment": "^2.23.0",
     "moment-timezone": "^0.5.25",
-    "node-modules": "^1.0.1",
-    "randomcolor": "^0.5.4",
     "sweet-modal-vue": "^2.0.0",
     "v-calendar": "^0.9.7",
     "vue": "^2.6.10",
-    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.6",
-    "vuetify": "^1.5.16",
     "vuex": "^3.1.1",
     "vuex-persist": "^2.0.1"
   },
