Documentation for /search endpoint

--- a/docs/api_project.json
+++ b/docs/api_project.json
@@ -1,1 +1,16 @@
-{  "title": "Flyx API",  "url": "http://flyx-server.herokuapp.com",  "name": "server",  "version": "1.0.0",  "description": "",  "sampleUrl": false,  "defaultVersion": "0.0.0",  "apidoc": "0.3.0",  "generator": {    "name": "apidoc",    "time": "2019-06-28T23:11:12.748Z",    "url": "http://apidocjs.com",    "version": "0.17.7"  }}
+{
+  "title": "Flyx API",
+  "url": "http://flyx-server.herokuapp.com",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "sampleUrl": false,
+  "defaultVersion": "0.0.0",
+  "apidoc": "0.3.0",
+  "generator": {
+    "name": "apidoc",
+    "time": "2019-06-29T18:30:57.347Z",
+    "url": "http://apidocjs.com",
+    "version": "0.17.7"
+  }
+}
