--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -17,9 +17,11 @@
     "buefy": "^0.7.8",
     "bulma": "^0.7.5",
     "core-js": "^2.5.7",
+    "debounce": "^1.2.0",
     "dotenv": "^7.0.0",
     "firebase": "^5.11.1",
     "moment-timezone": "^0.5.25",
+    "password-validator": "^4.1.1",
     "sweet-modal-vue": "^2.0.0",
     "v-calendar": "^0.9.7",
     "vue": "^2.6.10",
