--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -23,7 +23,7 @@
     "moment-timezone": "^0.5.25",
     "password-validator": "^4.1.1",
     "sweet-modal-vue": "^2.0.0",
-    "v-calendar": "^0.9.7",
+    "v-calendar": "^1.0.0-beta.16",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1",
